Fix 500 error space slug

--- a/src/Kunstmaan/NodeBundle/Resources/views/Form/formWidgets.html.twig
+++ b/src/Kunstmaan/NodeBundle/Resources/views/Form/formWidgets.html.twig
@@ -76,7 +76,7 @@
 {% block slug_widget %}
     {% apply spaceless %}
         {% set url = path('_slug', {
-            url: prefix ~ value
+            url: (prefix ~ value | slugify)
         }) %}
 
         {% if prefix|first != '/' %}
