--- a/src/Kunstmaan/PagePartBundle/Resources/views/PagePartAdminTwigExtension/modal.html.twig
+++ b/src/Kunstmaan/PagePartBundle/Resources/views/PagePartAdminTwigExtension/modal.html.twig
@@ -22,7 +22,7 @@
                     {% for pagePartType in pagepartadmin.possiblePagePartTypes %}
                         <div class="pp-search__item js-pp-search-item col-sm-6 col-lg-4" data-pp-name="{{ pagePartType.name|trans }}">
                             {% if pagePartType.preview is defined and pagePartType.preview is not empty %}
-                                {% set background = asset(pagePartType.preview, 'media') %}
+                                {% set background = asset(pagePartType.preview) %}
                             {% else %}
                                 {% set background = asset('bundles/kunstmaanadmin/default-theme/img/kunstmaan/ppchooser-placeholder.svg') %}
                             {% endif %}
