Disable encore tags

--- a/src/Kunstmaan/NodeBundle/Resources/views/NodeAdmin/edit.html.twig
+++ b/src/Kunstmaan/NodeBundle/Resources/views/NodeAdmin/edit.html.twig
@@ -130,7 +130,7 @@
         <link rel="stylesheet" href="{{ asset('/' ~ cssPath) }}">
     {% endif %}
 
-    {% if encore_entry_exists('admin') %}
-        {{ encore_entry_link_tags('admin') }}
-    {% endif %}
+{#    {% if encore_entry_exists('admin') %}#}
+{#        {{ encore_entry_link_tags('admin') }}#}
+{#    {% endif %}#}
 {% endblock %}
